<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_back_color"
    tools:context=".SIGNUP">

    <TextView
        android:id="@+id/output"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/app_back_color"
        android:gravity="center"
        android:password="false"
        android:textColor="#FFFF47"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="212dp"
        android:layout_height="71dp"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="68dp"
        android:background="#00BCED"
        android:gravity="center"
        android:password="false"
        android:text="@string/welcome"
        android:textColor="#FFFF47"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/sub"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_new"
        android:layout_width="198dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/sub"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/roll"
        android:layout_width="135dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/roll"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name" />

    <EditText
        android:id="@+id/sub"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/button_color"
        android:onClick="addCreden"
        android:text="@string/signup"
        android:textColor="@color/title_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_new"
        tools:text="@string/signup" />

    <EditText
        android:id="@+id/c_password_new"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/password_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/password_new" />

    <EditText
        android:id="@+id/password_new"
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/sub"
        app:layout_constraintTop_toBottomOf="@+id/sub" />
</androidx.constraintlayout.widget.ConstraintLayout>